--- a/webapp/public/css/styling.css
+++ b/webapp/public/css/styling.css
@@ -1,7 +1,5 @@
 /***********************************************************************
-* Licensed Materials - Property of HCL
-* (c) Copyright HCL Technologies Ltd. 2018.  All Rights Reserved.
-* Trademark of HCL Technologies Limited
+* (c) Copyright HCL Technologies Ltd. 2018.  MIT Licensed!
 ************************************************************************/
 
 svg{
